--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -1,17 +1,18 @@
 <nav id="menu">
    <ul>
-      <li><a href="index.html">Home</a></li>
+      <li><a href="/">Home</a></li>
       <li>
          <a href="#" class="icon solid fa-angle-down">Services</a>
          <ul>
-            <li><a href="generic.html">Generic</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="elements.html">Elements</a></li>
+            <li><a href="services/full-bath-brush.html">Full Bath & Brush</a></li>
+            <li><a href="services/partial-groom.html">Partial Groom</a></li>
+            <li><a href="services/full-groom.html">Full Groom</a></li>
+            <li><a href="services/a-la-carte.html">Services A La Carte</a></li>
          </ul>
       </li>
-      <li><a href="index.html">FAQs</a></li>
-      <li><a href="index.html">Gallery</a></li>
-      <li><a href="index.html">Contact Us</a></li>
+      <li><a href="faq.html">FAQs</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+      <li><a href="contact.html">Contact Us</a></li>
       <li><a href="#" class="button">Book Now</a></li>
    </ul>
 </nav>
