--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,8 +4,11 @@ interface Props {
 }
 
 const { title } = Astro.props;
-
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 import "../sass/main.scss";
+
+const isHome = Astro.url.pathname == "/";
 ---
 
 <!doctype html>
@@ -18,8 +21,14 @@ import "../sass/main.scss";
 			content="width=device-width, initial-scale=1, user-scalable=no"
 		/>
 	</head>
-	<body class="landing is-preload">
-		<slot />
+	<body class:list={["is-preload", { landing: isHome }]}>
+		<div id="page-wrapper">
+			<Header />
+
+			<slot />
+
+			<Footer />
+		</div>
 
 		<script is:inline src="/js/jquery.min.js"></script>
 		<script is:inline src="/js/jquery.dropotron.min.js"></script>
