--- a/src/sass/libs/_vars.scss
+++ b/src/sass/libs/_vars.scss
@@ -30,7 +30,7 @@
 	$palette: (
 		bg:					#f5f5f5,
 		fg:					#777,
-		fg-bold:			#646464,
+		fg-bold:			#56368A,
 		fg-light:			#999,
 		border:				#e5e5e5,
 		border-bg:			#f8f8f8,
@@ -45,17 +45,17 @@
 		),
 
 		accent1: (
-			bg:				#666,
-			fg:				mix(#666, #ffffff, 25%),
+			bg:				#EB2077,
+			fg:				mix(#EB2077, #ffffff, 25%),
 			fg-bold:		#ffffff,
-			fg-light:		mix(#666, #ffffff, 40%)
+			fg-light:		mix(#EB2077, #ffffff, 40%)
 		),
 
 		accent2: (
-			bg:				#e89980,
-			fg:				mix(#e89980, #ffffff, 25%),
+			bg:				#5DBFC2,
+			fg:				mix(#5DBFC2, #ffffff, 25%),
 			fg-bold:		#ffffff,
-			fg-light:		mix(#e89980, #ffffff, 40%)
+			fg-light:		mix(#5DBFC2, #ffffff, 40%)
 		),
 
 		accent3: (
