--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -4,10 +4,10 @@
       <li>
          <a href="#" class="icon solid fa-angle-down">Services</a>
          <ul>
-            <li><a href="services/full-bath-brush.html">Full Bath & Brush</a></li>
-            <li><a href="services/partial-groom.html">Partial Groom</a></li>
-            <li><a href="services/full-groom.html">Full Groom</a></li>
-            <li><a href="services/a-la-carte.html">Services A La Carte</a></li>
+            <li><a href="/services/full-bath-brush.html">Full Bath & Brush</a></li>
+            <li><a href="/services/partial-groom.html">Partial Groom</a></li>
+            <li><a href="/services/full-groom.html">Full Groom</a></li>
+            <li><a href="/services/services-a-la-carte.html">Services A La Carte</a></li>
          </ul>
       </li>
       <li><a href="faq.html">FAQs</a></li>
