--- a/src/sass/libs/_vars.scss
+++ b/src/sass/libs/_vars.scss
@@ -38,9 +38,10 @@
 		border2-bg:			#f0f0f0,
 
 		header: (
-			bg:				#444,
-			fg:				#bbb,
-			fg-bold:		#fff,
+			bg:				#56368A,
+			bg-light: #80808025,
+			fg:				#555,
+			fg-bold:		#555,
 			fg-light:		#999
 		),
 
