--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,7 +12,7 @@ const isHome = Astro.url.pathname == "/";
 
 <style>
    #header h1 {
-      color: whitesmoke;
+      /* color: whitesmoke; */
       font-size: x-large;
       font-weight: 500;
    }
