--- a/src/pages/services/partial-groom.astro
+++ b/src/pages/services/partial-groom.astro
@@ -1,18 +1,18 @@
 ---
 import Layout from "../../layouts/Layout.astro";
 import Image from "astro/components/Image.astro";
-import fullbath from "../../images/full-bath.webp";
+import partialgroom from "../../images/partial-groom.webp";
 ---
 
-<Layout title="Services :: Full Bath & Brush">
+<Layout title="Services :: Partial Groom">
    <!-- Main -->
    <section id="main" class="container">
       <header>
-         <h2>Full Bath & Brush</h2>
+         <h2>Partial Groom</h2>
          <!-- <p>A generic page for every non-generic situation.</p> -->
       </header>
       <div class="box">
-         <span class="image featured"> <Image src={fullbath} alt="" /></span>
+         <span class="image featured"> <Image src={partialgroom} alt="" /></span>
          <h4>Includes:</h4>
          <ul>
             <li>Massage bath</li>
@@ -21,15 +21,16 @@ import fullbath from "../../images/full-bath.webp";
             <li>Nail clipper and file</li>
             <li>Ear cleaning (Ear plucking is not include)</li>
             <li>Teeth brush</li>
+            <li>Sanitation trim, face trim and feet trim</li>
             <li>Cologne</li>
             <li>Bandana or hair bows</li>
          </ul>
 
          <div class="prices">
-            <p>Small dog (0 - 19 lbs) Starting at $95</p>
-            <p>Medium dog (20 - 39 lbs) Starting at $105</p>
-            <p>Large dog (40 - 59 lbs) Starting at $120</p>
-            <p>Extra Large dog (Over 60 lbs) Starting at $145</p>
+            <p>Small dog (0 - 19 lbs) Starting at $105</p>
+            <p>Medium dog (20 - 39 lbs) Starting at $125</p>
+            <p>Large dog (40 - 59 lbs) Starting at $145</p>
+            <p>Extra Large dog (Over 60 lbs) Starting at $165</p>
          </div>
       </div>
    </section>
