--- a/src/sass/libs/_vars.scss
+++ b/src/sass/libs/_vars.scss
@@ -20,10 +20,10 @@
 
 // Font.
 	$font: (
-		family:				('Source Sans Pro', sans-serif),
+		family:				('Open Sans Variable', sans-serif),
 		family-fixed:		monospace,
-		weight:				300,
-		weight-bold:		400,
+		weight:				400,
+		weight-bold:		600,
 	);
 
 // Palette.
