--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,14 +5,6 @@
 @import 'libs/breakpoints';
 @import 'libs/html-grid';
 @import 'libs/fontawesome.all.min.css';
-@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,300italic,400italic");
-
-/*
-	Alpha by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
-
 // Breakpoints.
 
 @include breakpoints((wide: (1281px, 1680px),
@@ -257,6 +249,7 @@ h3,
 h4,
 h5,
 h6 {
+	font-family: 'Chewy', sans-serif;
 	color: _palette(fg-bold);
 	font-weight: _font(weight);
 	line-height: 1em;
@@ -1428,7 +1421,7 @@ body.landing {
 			@include vendor('transition', 'none');
 			border: 0;
 			border-top: solid 1px #f2f2f2;
-			color: inherit;
+			color: #555;
 			display: block;
 			padding: 0.15em 1em;
 		}
