--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 // import Card from "../components/Card.astro";
 import Image from "astro/components/Image.astro";
-import logoHappy from "../images/logo_Happy_Tail_Grooming.webp";
+import logoHappy from "../images/Logo_Happy_Tail_Grooming.webp";
 import northLogo from "../images/north-ca.jpg";
 import southLogo from "../images/south-ca__.jpg";
 import cred0 from "../images/credentials0.webp";
@@ -14,7 +14,7 @@ import cred2 from "../images/credentials2.webp";
 	<!-- Banner -->
 	<section id="banner">
 		<div class="logo">
-			<Image src={logoHappy} alt="Logo Happy Tail Grooming" />
+			<Image src={logoHappy} alt="Logo Happy Tail Grooming" width="400" />
 		</div>
 		<!-- <h2>Happy Tail Grooming</h2> -->
 		<p>
