--- a/src/pages/services/partial-groom.astro
+++ b/src/pages/services/partial-groom.astro
@@ -14,16 +14,16 @@ import partialgroom from "../../images/partial-groom.webp";
       <div class="box">
          <span class="image featured"> <Image src={partialgroom} alt="" /></span>
          <h4>Includes:</h4>
-         <ul>
-            <li>Massage bath</li>
-            <li>Facial wash</li>
-            <li>Hand blow out, brush out and de-shedding if needed</li>
-            <li>Nail clipper and file</li>
-            <li>Ear cleaning (Ear plucking is not include)</li>
-            <li>Teeth brush</li>
-            <li>Sanitation trim, face trim and feet trim</li>
-            <li>Cologne</li>
-            <li>Bandana or hair bows</li>
+         <ul class="paw">
+            <li><i class="fa-solid fa-paw"></i>Massage bath</li>
+            <li><i class="fa-solid fa-paw"></i>Facial wash</li>
+            <li><i class="fa-solid fa-paw"></i>Hand blow out, brush out and de-shedding if needed</li>
+            <li><i class="fa-solid fa-paw"></i>Nail clipper and file</li>
+            <li><i class="fa-solid fa-paw"></i>Ear cleaning (Ear plucking is not include)</li>
+            <li><i class="fa-solid fa-paw"></i>Teeth brush</li>
+            <li><i class="fa-solid fa-paw"></i>Sanitation trim, face trim and feet trim</li>
+            <li><i class="fa-solid fa-paw"></i>Cologne</li>
+            <li><i class="fa-solid fa-paw"></i>Bandana or hair bows</li>
          </ul>
 
          <div class="prices">
