--- a/src/pages/services/services-a-la-carte.astro
+++ b/src/pages/services/services-a-la-carte.astro
@@ -13,20 +13,17 @@ import image from "../../images/services-carte.webp";
       </header>
       <div class="box">
          <span class="image featured"> <Image src={image} alt="" /></span>
-
-             
-
-         <ul>
-            <li>De - Matting + $15 ~ Up</li>
-            <li>Ear Plucking $15</li>
-            <li>Anal Gland Expression $15</li>
+         <ul class="paw">
+            <li><i class="fa-solid fa-paw"></i>De - Matting + $15 ~ Up</li>
+            <li><i class="fa-solid fa-paw"></i>Ear Plucking $15</li>
+            <li><i class="fa-solid fa-paw"></i>Anal Gland Expression $15</li>
             <li>
-               Specialty Shampoo (Hypoallergenic, whitening, flea and tick
+               <i class="fa-solid fa-paw"></i>Specialty Shampoo (Hypoallergenic, whitening, flea and tick
                shampoo, etc) + $10 ~ Up
             </li>
-            <li>Soothing Paws Treatment $10</li>
-            <li>Nail Polish $15</li>
-            <li>Ask About Coloring Services</li>
+            <li><i class="fa-solid fa-paw"></i>Soothing Paws Treatment $10</li>
+            <li><i class="fa-solid fa-paw"></i>Nail Polish $15</li>
+            <li><i class="fa-solid fa-paw"></i>Ask About Coloring Services</li>
          </ul>
 
          <div class="prices">
