--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -2,13 +2,13 @@
    <ul>
       <li><a href="/">Home</a></li>
       <li>
-         <a href="#" class="icon solid fa-angle-down">Services</a>
-         <ul>
+         <a href="services">Services</a>
+         <!-- <ul>
             <li><a href="/services/full-bath-brush.html">Full Bath & Brush</a></li>
             <li><a href="/services/partial-groom.html">Partial Groom</a></li>
             <li><a href="/services/full-groom.html">Full Groom</a></li>
             <li><a href="/services/services-a-la-carte.html">Services A La Carte</a></li>
-         </ul>
+         </ul> -->
       </li>
       <li><a href="faq.html">FAQs</a></li>
       <li><a href="gallery.html">Gallery</a></li>
