--- a/src/pages/services/full-bath-brush.astro
+++ b/src/pages/services/full-bath-brush.astro
@@ -14,15 +14,15 @@ import fullbath from "../../images/full-bath.webp";
       <div class="box">
          <span class="image featured"> <Image src={fullbath} alt="" /></span>
          <h4>Includes:</h4>
-         <ul>
-            <li>Massage bath</li>
-            <li>Facial wash</li>
-            <li>Hand blow out, brush out and de-shedding if needed</li>
-            <li>Nail clipper and file</li>
-            <li>Ear cleaning (Ear plucking is not include)</li>
-            <li>Teeth brush</li>
-            <li>Cologne</li>
-            <li>Bandana or hair bows</li>
+         <ul class="paw">
+            <li><i class="fa-solid fa-paw"></i>Massage bath</li>
+            <li><i class="fa-solid fa-paw"></i>Facial wash</li>
+            <li><i class="fa-solid fa-paw"></i>Hand blow out, brush out and de-shedding if needed</li>
+            <li><i class="fa-solid fa-paw"></i>Nail clipper and file</li>
+            <li><i class="fa-solid fa-paw"></i>Ear cleaning (Ear plucking is not include)</li>
+            <li><i class="fa-solid fa-paw"></i>Teeth brush</li>
+            <li><i class="fa-solid fa-paw"></i>Cologne</li>
+            <li><i class="fa-solid fa-paw"></i>Bandana or hair bows</li>
          </ul>
 
          <div class="prices">
