--- a/src/sass/libs/_vars.scss
+++ b/src/sass/libs/_vars.scss
@@ -1,83 +1,72 @@
 // Misc.
-	$misc: (
-		z-index-base:		10000
-	);
+$misc: (
+	z-index-base: 10000
+);
 
 // Duration.
-	$duration: (
-		navPanel:			0.5s,
-		transition:			0.2s
-	);
+$duration: (
+	navPanel: 0.5s,
+	transition: 0.2s
+);
 
 // Size.
-	$size: (
-		navPanel:			275px,
-		border-radius:		6px,
-		element-height:		3em,
-		element-margin:		2em,
-		container-width:	60em
-	);
+$size: (
+	navPanel: 275px,
+	border-radius: 6px,
+	element-height: 3em,
+	element-margin: 2em,
+	container-width: 60em
+);
 
 // Font.
-	$font: (
-		family:				('Open Sans Variable', sans-serif),
-		family-fixed:		monospace,
-		weight:				400,
-		weight-bold:		600,
-	);
+$font: (
+	family: ('Open Sans Variable', sans-serif),
+	family-fixed: monospace,
+	weight: 400,
+	weight-bold: 600,
+);
 
 // Palette.
-	$palette: (
-		bg:					#f5f5f5,
-		fg:					#777,
-		fg-bold:			#56368A,
-		fg-light:			#999,
-		border:				#e5e5e5,
-		border-bg:			#f8f8f8,
-		border2:			#dddddd,
-		border2-bg:			#f0f0f0,
+$palette: (
+	bg: #f5f5f5,
+	fg: #777,
+	fg-bold: #646464,
+	fg-light: #999,
+	border: #e5e5e5,
+	border-bg: #f8f8f8,
+	border2: #dddddd,
+	border2-bg: #f0f0f0,
+	purple: #56368A,
 
-		header: (
-			bg:				#56368A,
-			bg-light: #80808025,
-			fg:				#555,
-			fg-bold:		#555,
-			fg-light:		#999
-		),
+	header: (bg: #666,
+		fg: #555,
+		fg-bold: #333,
+		fg-light: #f5f5f5,
 
-		accent1: (
-			bg:				#EB2077,
-			fg:				mix(#EB2077, #ffffff, 25%),
-			fg-bold:		#ffffff,
-			fg-light:		mix(#EB2077, #ffffff, 40%)
-		),
+	),
 
-		accent2: (
-			bg:				#5DBFC2,
-			fg:				mix(#5DBFC2, #ffffff, 25%),
-			fg-bold:		#ffffff,
-			fg-light:		mix(#5DBFC2, #ffffff, 40%)
-		),
+	accent1: (bg: #EB2077,
+		fg: mix(#EB2077, #ffffff, 35%),
+		fg-bold: #d80b64,
+		fg-light: mix(#EB2077, #ffffff, 65%)),
 
-		accent3: (
-			bg:				#7fcdb8,
-			fg:				mix(#7fcdb8, #ffffff, 25%),
-			fg-bold:		#ffffff,
-			fg-light:		mix(#7fcdb8, #ffffff, 40%)
-		),
+	accent2: (bg: #5DBFC2,
+		fg: mix(#5DBFC2, #ffffff, 25%),
+		fg-bold: #5DC5CB,
+		fg-light: mix(#5DBFC2, #ffffff, 40%)),
 
-		accent4: (
-			bg:				#90b0ba,
-			fg:				mix(#90b0ba, #ffffff, 25%),
-			fg-bold:		#ffffff,
-			fg-light:		mix(#90b0ba, #ffffff, 40%)
-		),
+	accent3: (bg: #7fcdb8,
+		fg: mix(#7fcdb8, #ffffff, 25%),
+		fg-bold: #ffffff,
+		fg-light: mix(#7fcdb8, #ffffff, 40%)),
 
-		accent5: (
-			bg:				#e5cb95,
-			fg:				mix(#e5cb95, #ffffff, 25%),
-			fg-bold:		#ffffff,
-			fg-light:		mix(#e5cb95, #ffffff, 40%)
-		)
+	accent4: (bg: #90b0ba,
+		fg: mix(#90b0ba, #ffffff, 25%),
+		fg-bold: #ffffff,
+		fg-light: mix(#90b0ba, #ffffff, 40%)),
 
-	);
+	accent5: (bg: #e5cb95,
+		fg: mix(#e5cb95, #ffffff, 25%),
+		fg-bold: #ffffff,
+		fg-light: mix(#e5cb95, #ffffff, 40%))
+);
