--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -562,7 +562,7 @@ textarea {
 }
 
 input[type="checkbox"],
-input[type="radio"],
+input[type="radio"]
 {
 @include vendor('appearance', 'none');
 display: block;
