--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -562,59 +562,58 @@ textarea {
 }
 
 input[type="checkbox"],
-input[type="radio"]
-{
-@include vendor('appearance', 'none');
-display: block;
-float: left;
-margin-right: -2em;
-opacity: 0;
-width: 1em;
-z-index: -1;
+input[type="radio"] {
+	@include vendor('appearance', 'none');
+	display: block;
+	float: left;
+	margin-right: -2em;
+	opacity: 0;
+	width: 1em;
+	z-index: -1;
 
-&+label {
-	@include icon(false, solid);
-	color: _palette(fg);
-	cursor: pointer;
-	display: inline-block;
-	font-size: 1em;
-	font-weight: _font(weight);
-	padding-left: (_size(element-height) * 0.6) + 0.75em;
-	padding-right: 0.75em;
-	position: relative;
-
-	&:before {
-		background: _palette(border-bg);
-		border-radius: _size(border-radius);
-		border: solid 1px _palette(border);
-		content: '';
+	&+label {
+		@include icon(false, solid);
+		color: _palette(fg);
+		cursor: pointer;
 		display: inline-block;
-		font-size: 0.8em;
-		height: (_size(element-height) * 0.75);
-		left: 0;
-		line-height: (_size(element-height) * 0.75);
-		position: absolute;
-		text-align: center;
-		top: 0;
-		width: (_size(element-height) * 0.75);
-	}
-}
+		font-size: 1em;
+		font-weight: _font(weight);
+		padding-left: (_size(element-height) * 0.6) + 0.75em;
+		padding-right: 0.75em;
+		position: relative;
 
-&:checked+label {
-	&:before {
-		background: _palette(accent1, bg);
-		border-color: _palette(accent1, bg);
-		color: _palette(accent2, fg-bold);
-		content: '\f00c';
+		&:before {
+			background: _palette(border-bg);
+			border-radius: _size(border-radius);
+			border: solid 1px _palette(border);
+			content: '';
+			display: inline-block;
+			font-size: 0.8em;
+			height: (_size(element-height) * 0.75);
+			left: 0;
+			line-height: (_size(element-height) * 0.75);
+			position: absolute;
+			text-align: center;
+			top: 0;
+			width: (_size(element-height) * 0.75);
+		}
 	}
-}
 
-&:focus+label {
-	&:before {
-		border-color: _palette(accent2, bg);
-		box-shadow: 0 0 0 1px _palette(accent2, bg);
+	&:checked+label {
+		&:before {
+			background: _palette(accent1, bg);
+			border-color: _palette(accent1, bg);
+			color: _palette(accent2, fg-bold);
+			content: '\f00c';
+		}
 	}
-}
+
+	&:focus+label {
+		&:before {
+			border-color: _palette(accent2, bg);
+			box-shadow: 0 0 0 1px _palette(accent2, bg);
+		}
+	}
 }
 
 input[type="checkbox"] {
