--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -63,6 +63,8 @@ import cred2 from "../images/credentials2.webp";
 
 		<section class="box special">
 			<header class="major">
+
+				<h2>Catherine Toro</h2>
 				<h2>Owner / Founder & Professional Dog Groomer</h2>
 				<p>
 					Most of my adult life has revolved around my love of dogs. My
