--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -1,53 +1,84 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Image from "astro/components/Image.astro";
-import pic01 from "../images/gallery/pic (1).jpg";
-import pic02 from "../images/gallery/pic (2).jpg";
-import pic03 from "../images/gallery/pic3.jpg";
-import pic04 from "../images/gallery/pic (4).jpg";
-import pic05 from "../images/gallery/pic (5).jpg";
-import pic06 from "../images/gallery/pic (6).jpg";
-import pic07 from "../images/gallery/pic (7).jpg";
-import pic08 from "../images/gallery/pic (8).jpg";
-import pic09 from "../images/gallery/pic (9).jpg";
-import pic10 from "../images/gallery/pic (10).jpg";
-import pic11 from "../images/gallery/pic (11).jpg";
-import pic12 from "../images/gallery/pic (12).jpg";
-import pic13 from "../images/gallery/pic (13).jpg";
-import pic14 from "../images/gallery/pic (14).jpg";
-import pic15 from "../images/gallery/pic (15).jpg";
-import pic16 from "../images/gallery/pic (16).jpg";
-import pic17 from "../images/gallery/pic (17).jpg";
-import pic18 from "../images/gallery/pic (18).jpg";
-import pic19 from "../images/gallery/pic (19).jpg";
-import pic20 from "../images/gallery/pic (20).jpg";
-import pic21 from "../images/gallery/pic (21).jpg";
-import pic22 from "../images/gallery/pic (22).jpg";
-import pic23 from "../images/gallery/pic (23).jpg";
-import pic24 from "../images/gallery/pic (24).jpg";
+
 ---
 
 <Layout title="Gallery :: Happy Tail Grooming">
    <!-- Main -->
-   <section id="main" class="container medium">
+   <section id="main" class="container large">
       <header>
-         <h2>FREQUENTLY ASKED QUESTIONS</h2>
+         <h2>Gallery</h2>
       </header>
       <div class="box gallery">
          <div class="image">
-            <Image src={pic01} alt="" />
+            <img src="gallery/pic (1).jpg" alt="" />
          </div>
          <div class="image">
-            <Image src={pic02} alt="" />
+            <img src="gallery/pic (2).jpg" alt="" />
          </div>
          <div class="image">
-            <img src={pic03.src} alt="" />
+            <img src="gallery/pic (3).jpg" alt="" />
          </div>
          <div class="image">
-            <img src={pic04.src} alt="" />
+            <img src="gallery/pic (4).jpg" alt="" />
          </div>
          <div class="image">
-            <img src={pic05.src} alt="" />
+            <img src="gallery/pic (5).jpg" alt="" />
+         </div>
+         <div class="image">
+            <img src="gallery/pic (6).jpg" alt="" />
+         </div>
+         <div class="image">
+            <img src="gallery/pic (7).jpg" alt="" />
+         </div>
+         <div class="image">
+            <img src="gallery/pic (8).jpg" alt="" />
+         </div>
+         <div class="image">
+            <img src="gallery/pic (9).jpg" alt="" />
+         </div>
+         <div class="image">
+            <img src="gallery/pic (10).jpg" alt="" />
+         </div>
+         <div class="image">
+            <img src="gallery/pic (11).jpg" alt="" />
+         </div>
+         <div class="image">
+            <img src="gallery/pic (12).jpg" alt="" />
+         </div>
+         <div class="image">
+            <img src="gallery/pic (13).jpg" alt="" />
+         </div>
+         <div class="image">
+            <img src="gallery/pic (14).jpg" alt="" />
+         </div>
+         <div class="image">
+            <img src="gallery/pic (15).jpg" alt="" />
+         </div>
+         <div class="image">
+            <img src="gallery/pic (16).jpg" alt="" />
+         </div>
+         <div class="image">
+            <img src="gallery/pic (17).jpg" alt="" />
+         </div>
+         <div class="image">
+            <img src="gallery/pic (18).jpg" alt="" />
+         </div>
+         <div class="image">
+            <img src="gallery/pic (19).jpg" alt="" />
+         </div>
+         <div class="image">
+            <img src="gallery/pic (20).jpg" alt="" />
+         </div>
+         <div class="image">
+            <img src="gallery/pic (21).jpg" alt="" />
+         </div>
+         <div class="image">
+            <img src="gallery/pic (22).jpg" alt="" />
+         </div>
+         <div class="image">
+            <img src="gallery/pic (23).jpg" alt="" />
          </div>
       </div>
    </section>
@@ -62,10 +93,11 @@ import pic24 from "../images/gallery/pic (24).jpg";
    .gallery {
       display: flex;
       flex-wrap: wrap;
+      justify-content: center;
    }
 
    .gallery .image {
-      width: 25%;
+      width: 22%;
       margin: 1rem;;
    }
    
