--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -2,7 +2,7 @@
    <ul>
       <li><a href="/">Home</a></li>
       <li>
-         <a href="services">Services</a>
+         <a href="/services">Services</a>
          <!-- <ul>
             <li><a href="/services/full-bath-brush.html">Full Bath & Brush</a></li>
             <li><a href="/services/partial-groom.html">Partial Groom</a></li>
@@ -10,9 +10,9 @@
             <li><a href="/services/services-a-la-carte.html">Services A La Carte</a></li>
          </ul> -->
       </li>
-      <li><a href="faq.html">FAQs</a></li>
-      <li><a href="gallery.html">Gallery</a></li>
-      <li><a href="contact.html">Contact Us</a></li>
+      <li><a href="/faq.html">FAQs</a></li>
+      <li><a href="/gallery.html">Gallery</a></li>
+      <li><a href="/contact.html">Contact Us</a></li>
       <li><a href="#" class="button">Book Now</a></li>
    </ul>
 </nav>
